--- a/getting_started_with_python.ipynb
+++ b/getting_started_with_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeKzaN+fDp3RDyqZJJ0xPS",
+      "authorship_tag": "ABX9TyNwwaTBJk++1bCvaG2kOci5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,86 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Introduction to Python for DevOps"
+      ],
       "metadata": {
-        "id": "CHS-VsIJAF7t"
+        "id": "2P4P8WjwCYuB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gopFLrLzCfEH"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Statements in Python "
+      ],
+      "metadata": {
+        "id": "aTjbsSECCgMu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello world\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1WspnPbJCk01",
+        "outputId": "e93675eb-8b63-4a03-b33d-647dcbd42d05"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"New environment here !\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "clYb5L9lC6vj",
+        "outputId": "555729c3-e352-4574-e726-f6f8cf052431"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "New environment here !\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HbUD9dUHKsti"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
